--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -69,6 +69,7 @@ jobs:
       run: |
         cd openwrt/bin/targets/rockchip/armv8
         rm -rf `ls | grep -v "squashfs"`
+        gzip *.img
     - name: Upload Firmwares
       uses: actions/upload-artifact@master
       with:
