--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -68,9 +68,7 @@ jobs:
     - name: Cleaning
       run: |
         cd openwrt/bin/targets/rockchip/armv8
-        rm -rf `ls | grep -v "squashfs"`
-        gzip -d *.gz
-        gzip *.img
+        /bin/bash ../../../../../SCRIPTS/05_cleaning.sh
     - name: Upload Firmwares
       uses: actions/upload-artifact@master
       with:
