Revert "remove download step in action yml" (commit 56a7abae37f5d78b8aeacb060b700564ca1098ff)

--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -85,6 +85,13 @@ jobs:
         make defconfig
         chmod -R 755 ./
 
+    - name: Make Download
+      run: |
+        df -h
+        cd openwrt
+        let Make_Process=$(nproc)*4
+        make download -j${Make_Process}
+
     - name: Make Toolchain
       run: |
         df -h
