--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -5,9 +5,9 @@ on:
 #    branches: 
 #      - master
   schedule:
-    - cron: 05 11 * * *
-#  watch:
-#    types: [started]
+    - cron: 5 9 * * *
+  watch:
+    types: [started]
 
 jobs:
   build:
