--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -6,8 +6,8 @@ on:
 #      - master
   schedule:
     - cron: 5 9 * * *
-  watch:
-    types: [started]
+#  watch:
+#    types: [started]
 
 jobs:
   build:
