--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -1,15 +1,11 @@
 name: R2S-OpenWrt-Without-Docker
 
 on:
-#  push:
-#    branches: 
-#      - master
+  push:
+    branches: 
+      - master
   schedule:
     - cron: 5 9 * * *
-#  watch:
-#    types: [started]
-  paths:
-    - 'SWITCH'
 
 jobs:
   build:
