--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -89,8 +89,16 @@ jobs:
         cd openwrt
         let Make_Process=$(nproc)*4
         make download -j${Make_Process}
-        chmod -R u=rwX,og=rX ./
-        find ./ -type f -print0 | xargs -s1024 -0 file | grep 'executable\|ELF' | cut -d ':' -f1 | xargs -s1024 chmod 755
+
+    - name: Smart chmod
+      run: |
+        MY_Filter=$(mktemp)
+        echo '/\.git' >  ${MY_Filter}
+        echo '/\.svn' >> ${MY_Filter}
+        find ./ -maxdepth 1 | grep -v '\./$' | grep -v '/\.git' | xargs -s1024 chmod -R u=rwX,og=rX
+        find ./ -type f | grep -v -f ${MY_Filter} | xargs -s1024 file | grep 'executable\|ELF' | cut -d ':' -f1 | xargs -s1024 chmod 755
+        rm -f ${MY_Filter}
+        unset MY_Filter
 
     - name: Make Toolchain
       run: |
