--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -111,8 +111,7 @@ jobs:
       run: |
         df -h
         cd openwrt
-        let Make_Process=$(nproc)+1
-        make -j${Make_Process} V=s
+        make -j1 V=s
 
     - name: Cleaning and hashing
       run: |
