--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -113,6 +113,9 @@ jobs:
       run: |
         df -h
         cd openwrt
+        ulimit -c unlimited
+        ulimit -i unlimited
+        ulimit -u unlimited
         let Make_Process=$(nproc)+1
         make -j${Make_Process} V=s
 
