--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -107,7 +107,7 @@ jobs:
         df -h
         cd openwrt
         ulimit -c unlimited
-        ulimit -i unlimited
+        ulimit -l unlimited
         ulimit -u unlimited
         let Make_Process=$(nproc)+1
         make toolchain/install -j${Make_Process} V=s
@@ -117,7 +117,7 @@ jobs:
         df -h
         cd openwrt
         ulimit -c unlimited
-        ulimit -i unlimited
+        ulimit -l unlimited
         ulimit -u unlimited
         let Make_Process=$(nproc)+1
         make -j${Make_Process} V=s
