reorder the commands in 02_prepare_package.sh

--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -87,6 +87,7 @@ jobs:
 
     - name: Make Download
       run: |
+        rm -rf ./others_src
         df -h
         cd openwrt
         let Make_Process=$(nproc)*4
