--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -52,14 +52,14 @@ jobs:
         sudo -E apt-get install -y build-essential rsync asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libreadline-dev libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint ccache curl wget vim nano python python3 python-pip python3-pip python-ply python3-ply haveged lrzsz device-tree-compiler scons
         wget -O - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | bash
         sudo -E apt-get clean -y
-        git config --global user.name "GitHub Actions" && git config --global user.email "noreply@github.com"
+        git config --global user.name 'GitHub Actions' && git config --global user.email 'noreply@github.com'
         df -h
 
     - name: Prepare Mixedwrt
       run: |
         sudo chown -R runner:runner /home/runner/work/R2S-OpenWrt
         cp -f ./SCRIPTS/01_get_ready.sh ./01_get_ready.sh
-        echo "::set-env name=DATETIME::$(date "+%Y%m%d-%H%M")"
+        echo "::set-env name=DATETIME::$(date '+%Y%m%d-%H%M')"
         /bin/bash ./01_get_ready.sh
 
     - name: Prepare Package
