--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -1,16 +1,15 @@
 name: R2S-OpenWrt-Without-Docker
 
 on:
-  push:
-    branches: 
-      - master
   schedule:
     - cron: 5 9 * * *
+  watch:
+    types: started
 
 jobs:
   build:
     runs-on: ubuntu-18.04
-#    if: github.event.sender.id == 45143996
+    if: github.event.repository.owner.id == github.event.sender.id
     
     steps:
     - name: Clone Repository
