--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -126,12 +126,14 @@ jobs:
         df -h
         cd openwrt
         let Make_Process=$(nproc)+1
-        make -j${Make_Process}
+        make -j${Make_Process} V=s
         echo $?
 
     - name: If Error
       if: steps.compileopenwrt.outcome == 'failure'
       run: |
+        cat openwrt/.config
+        echo '================================================================'
         cd openwrt && make -j1 V=s
 
     - name: Cleaning and hashing
