--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -126,7 +126,7 @@ jobs:
         df -h
         cd openwrt
         let Make_Process=$(nproc)+1
-        make -j${Make_Process} V=s
+        make -j${Make_Process} V=w
         echo $?
 
     - name: If Error
