fix Lienol branch rename

--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -89,7 +89,7 @@ jobs:
 
     - name: Make Config
       run: |
-        rm -rf ./lienol-dev-19.07
+        rm -rf ./lienol-19.07
         cd openwrt
         cp -f ../SEED/config_no_docker.seed .config
         cat   ../SEED/more.seed          >> .config
