--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -63,7 +63,7 @@ jobs:
       run: |
         sudo chown -R runner:docker ./
         cp -f ./SCRIPTS/01_get_ready.sh ./01_get_ready.sh
-        echo "::set-env name=DATETIME::$(date '+%Y%m%d-%H%M')"
+        echo "FMDATETIME=$(date '+%Y%m%d-%H%M')" >> $GITHUB_ENV
         /bin/bash ./01_get_ready.sh
 
     - name: Prepare Package
@@ -144,7 +144,7 @@ jobs:
         df -h
         rm -rf ./artifact && mkdir -p ./artifact
         cd ./artifact
-        echo "::set-env name=FIRMWARE::$PWD"
+        echo "FIRMWAREDIR=$(pwd)" >> $GITHUB_ENV
         cd ../openwrt
         cp -f ../clean_flash.sh ../artifact/clean_flash.sh
         cp -f .config           ../artifact/kconfig-full
@@ -158,5 +158,5 @@ jobs:
       uses: actions/upload-artifact@v2
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       with:
-        name: OpenWrt_R2S_${{ env.DATETIME }}
-        path: ${{ env.FIRMWARE }}
+        name: OpenWrt_R2S_${{ env.FMDATETIME }}
+        path: ${{ env.FIRMWAREDIR }}
