CI for experimental

--- a/.github/workflows/R2S-OpenWrt-Without-Docker.yml
+++ b/.github/workflows/R2S-OpenWrt-Without-Docker.yml
@@ -3,7 +3,7 @@ name: OpenWrt for R2S
 on:
   push:
     branches:
-      - master
+      - experimental
     paths:
       - 'CHANGELOG.md'
       - '.github/workflows/R2S-OpenWrt-Without-Docker.yml'
@@ -21,7 +21,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        ref: 'master'
+        ref: 'experimental'
 
     - name: Show system
       run: |
