--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'CHANGELOG.md'
       - '.github/workflows/R2S-OpenWrt.yml'
+      - 'build_trigger/r2s'
 
 env:
   UPLOAD_FIRMWARE: true
