--- a/.github/workflows/x86-fake.yml
+++ b/.github/workflows/x86-fake.yml
@@ -39,7 +39,6 @@ jobs:
       run: |
         sudo -E swapoff -a
         sudo -E rm -f /swapfile
-        sudo -E docker image prune -a -f
         sudo -E snap set system refresh.retain=2
         sudo -E apt-get clean
         sudo -E rm -rf /usr/share/dotnet /usr/local/lib/android/sdk /etc/mysql /etc/php /usr/local/share/boost
@@ -61,7 +60,7 @@ jobs:
         sudo chown -R runner:docker ./
         cp -f ./SCRIPTS/01_get_ready.sh ./01_get_ready.sh
         echo "FMDATETIME=$(date '+%Y%m%d-%H%M')" >> $GITHUB_ENV
-        /bin/bash -c 'echo $MYOPENWRTTARGET
+        /bin/bash -c 'echo $MYOPENWRTTARGET'
         mkdir openwrt
 
     - name: Prepare Package
