--- a/.github/workflows/x86-OpenWrt.yml
+++ b/.github/workflows/x86-OpenWrt.yml
@@ -12,6 +12,7 @@ on:
 env:
   UPLOAD_FIRMWARE: true
   TZ: Asia/Hong_Kong
+  MYOPENWRTTARGET: x86
 
 jobs:
   build:
@@ -63,7 +64,6 @@ jobs:
       run: |
         sudo chown -R runner:docker ./
         cp -f ./SCRIPTS/01_get_ready.sh ./01_get_ready.sh
-        echo "MYOPENWRTTARGET=x86" >> $GITHUB_ENV
         echo "FMDATETIME=$(date '+%Y%m%d-%H%M')" >> $GITHUB_ENV
         /bin/bash ./01_get_ready.sh
 
