--- a/PATCH/X86/files/etc/config/AdGuardHome.yaml
+++ b/PATCH/X86/files/etc/config/AdGuardHome.yaml
@@ -32,14 +32,17 @@ dns:
   upstream_dns_file: ""
   bootstrap_dns:
   - 127.0.0.1:6052
-  all_servers: true
-  fastest_addr: false
+  all_servers: false
+  fastest_addr: true
   allowed_clients: []
   disallowed_clients: []
-  blocked_hosts: []
+  blocked_hosts:
+  - version.bind
+  - id.server
+  - hostname.bind
   cache_size: 4194304
-  cache_ttl_min: 0
-  cache_ttl_max: 0
+  cache_ttl_min: 3600
+  cache_ttl_max: 36000
   bogus_nxdomain: []
   aaaa_disabled: false
   enable_dnssec: false
