update actions script

--- a/.github/workflows/x86-OpenWrt.yml
+++ b/.github/workflows/x86-OpenWrt.yml
@@ -55,7 +55,7 @@ jobs:
       run: |
         sudo -E rm -rf /etc/apt/sources.list.d
         sudo -E apt-get update -y
-        sudo -E apt-get install -y asciidoc autoconf automake binutils build-essential bzip2 ccache curl device-tree-compiler file flex gcc-multilib g++ g++-multilib gawk gcc gettext git git-core help2man libelf-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool make patch perl-modules python3 python3-distutils python3-pip python3-setuptools qemu-utils rsync scons subversion texinfo time unzip upx wget xsltproc zlib1g-dev
+        sudo -E apt-get install -y asciidoc autoconf automake autopoint binutils build-essential bzip2 ccache curl device-tree-compiler file flex g++ g++-multilib gawk gcc gcc-multilib gettext git git-core haveged help2man jq lib32gcc1 libc6-dev-i386 libelf-dev libglib2.0-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool libz-dev lrzsz make msmtp nano p7zip p7zip-full patch perl-modules python3 python3-distutils python3-pip python3-ply python3-setuptools qemu-utils rsync scons subversion texinfo time uglifyjs unzip upx vim wget xmlto xsltproc zlib1g-dev
         sudo -E apt-get clean -y
         git config --global user.name 'GitHub Actions' && git config --global user.email 'noreply@github.com'
         df -h
