rename seed files

--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -91,8 +91,8 @@ jobs:
     - name: Make Config
       run: |
         cd openwrt
-        cp -f ../SEED/R2S/config.seed  .config
-        cat   ../SEED/R2S/more.seed >> .config
+        cp -f ../SEED/R2S.config.seed .config
+        cat   ../SEED/more.seed    >> .config
         make defconfig
 
     - name: Make Download
