--- a/.github/workflows/x86-OpenWrt.yml
+++ b/.github/workflows/x86-OpenWrt.yml
@@ -90,8 +90,8 @@ jobs:
     - name: Make Config
       run: |
         cd openwrt
-        cp -f ../SEED/x86/config.seed  .config
-        cat   ../SEED/x86/more.seed >> .config
+        cp -f ../SEED/x86.config.seed .config
+        cat   ../SEED/more.seed    >> .config
         make defconfig
 
     - name: Make Download
