test github actions

--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -34,6 +34,12 @@ jobs:
         [ -f /proc/version ] && cat /proc/version
         [ -f /etc/issue.net ] && cat /etc/issue.net
 
+    - name: package test
+      run: |
+        find / -type f -name 'arm_neon.h' || true
+        sudo apt list --installed | grep -E "cross-?build" || true
+        false
+
     - name: Free disk space
       run: |
         sleep 30
