let's see what's going on

--- a/.github/workflows/R2S-OpenWrt-experimental.yml
+++ b/.github/workflows/R2S-OpenWrt-experimental.yml
@@ -100,7 +100,7 @@ jobs:
         df -h
         cd openwrt
         let Make_Process=$(nproc)*4
-        make download -j${Make_Process}
+        make download -j1 V=s
         echo $?
 
     - name: Smart chmod
