--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -1,18 +1,18 @@
-name: experimental OpenWrt for x86
+name: OpenWrt for R2S
 
 on:
   push:
     branches:
-      - experimental
+      - master
     paths:
       - 'CHANGELOG.md'
-      - '.github/workflows/x86-OpenWrt-experimental.yml'
-      - 'build_trigger/x86'
+      - '.github/workflows/R2S-OpenWrt.yml'
+      - 'build_trigger/r2s'
 
 env:
   UPLOAD_FIRMWARE: true
   TZ: Asia/Hong_Kong
-  MYOPENWRTTARGET: x86
+  MYOPENWRTTARGET: R2S
 
 jobs:
   build:
@@ -23,7 +23,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        ref: 'experimental'
+        ref: 'master'
 
     - name: Show system
       run: |
@@ -55,11 +55,12 @@ jobs:
         sudo -E rm -rf /etc/apt/sources.list.d
         sudo -E apt-get update -y
         sudo -E apt-get install -y asciidoc autoconf automake autopoint binutils build-essential bzip2 ccache curl device-tree-compiler file flex gawk gettext git git-core haveged jq lib32gcc1 libc6-dev-i386 libelf-dev libglib2.0-dev libncurses5-dev libreadline-dev libssl-dev libtool libz-dev lrzsz msmtp nano p7zip p7zip-full patch python3 python3-pip python3-ply qemu-utils rsync scons subversion texinfo uglifyjs unzip upx vim wget xmlto zlib1g-dev
+        wget -qO - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | sed 's/python-/python3-/g' | /bin/bash
         sudo -E apt-get clean -y
         git config --global user.name 'GitHub Actions' && git config --global user.email 'noreply@github.com'
         df -h
 
-    - name: Prepare Openwrt
+    - name: Prepare OpenWrt
       run: |
         sudo chown -R runner:docker ./
         cp -f ./SCRIPTS/01_get_ready.sh ./01_get_ready.sh
@@ -90,7 +91,7 @@ jobs:
     - name: Make Config
       run: |
         cd openwrt
-        cp -f ../SEED/x86.config.seed .config
+        cp -f ../SEED/R2S.config.seed .config
         cat   ../SEED/more.seed    >> .config
         make defconfig
 
@@ -99,7 +100,7 @@ jobs:
         df -h
         cd openwrt
         let Make_Process=$(nproc)*4
-        make download -j1 V=s
+        make download -j${Make_Process}
         echo $?
 
     - name: Smart chmod
@@ -144,9 +145,10 @@ jobs:
         cd ./artifact
         echo "FIRMWAREDIR=$(pwd)" >> $GITHUB_ENV
         cd ../openwrt
-        cp -f .config ../artifact/kconfig-full
+        cp -f ../clean_flash.sh ../artifact/clean_flash.sh
+        cp -f .config           ../artifact/kconfig-full
         /bin/bash ./scripts/diffconfig.sh > ../artifact/kconfig-lite
-        cd bin/targets/x86/64
+        cd bin/targets/rockchip/armv8
         ls -Ahl
         /bin/bash ../../../../../SCRIPTS/06_cleaning.sh
         mv -f ./* ../../../../../artifact/
@@ -156,5 +158,5 @@ jobs:
       uses: actions/upload-artifact@v2
       if: env.UPLOAD_FIRMWARE == 'true' && ${{ success() }}
       with:
-        name: OpenWrt_x86_${{ env.FMDATETIME }}
+        name: OpenWrt_R2S_${{ env.FMDATETIME }}
         path: ${{ env.FIRMWAREDIR }}
