--- a/.github/workflows/R4S-OpenWrt.yml
+++ b/.github/workflows/R4S-OpenWrt.yml
@@ -142,4 +142,4 @@ jobs:
         commit: master
         replacesArtifacts: true
         token: ${{ secrets.workflow_token }}
-        artifacts: ./artifact/*.zip,./artifact/*.sha256sum
+        artifacts: ./artifact/*.zip
