--- a/.github/workflows/X86-OpenWrt.yml
+++ b/.github/workflows/X86-OpenWrt.yml
@@ -2,7 +2,7 @@ name: X86-OpenWrt
 
 on:
   schedule:
-    - cron: 5 6 * * 5
+    - cron: 5 6 * * 0
   watch:
     types: started
 
@@ -142,4 +142,4 @@ jobs:
         commit: master
         replacesArtifacts: true
         token: ${{ secrets.workflow_token }}
-        artifacts: ./artifact/*.zip,./artifact/*.sha256sum
+        artifacts: ./artifact/*.zip
