--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -78,10 +78,10 @@ jobs:
         cd openwrt
         /bin/bash ./03_convert_translation.sh
 
-    - name: Remove Upx
-      run: |
-        cd openwrt
-        /bin/bash ./04_remove_upx.sh
+    # - name: Remove Upx
+    #   run: |
+    #     cd openwrt
+    #     /bin/bash ./04_remove_upx.sh
 
     - name: Add ACL
       run: |
