--- a/.github/workflows/X86-OpenWrt.yml
+++ b/.github/workflows/X86-OpenWrt.yml
@@ -93,7 +93,7 @@ jobs:
         df -h
         cd openwrt
         let make_process=$(nproc)+2
-        make toolchain/install -j${make_process} V=s
+        make toolchain/install -j${make_process} || make toolchain/install -j${make_process} V=s
     - name: Compile Openwrt
       id: compileopenwrt
       continue-on-error: true
